--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "An Ionic project",
   "devDependencies": {
+    "@ionic/v1-toolkit": "1.0.7",
     "gulp": "^3.5.6",
     "gulp-clean-css": "^3.7.0",
     "gulp-rename": "^1.2.0",
@@ -11,7 +12,7 @@
   "dependencies": {
     "bower-installer": "^1.3.6",
     "cordova-android": "7.0.0",
-    "cordova-ios": "^4.5.4",
+    "cordova-ios": "^4.5.5",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.19",
